--- a/webconfing/css.css
+++ b/webconfing/css.css
@@ -182,7 +182,7 @@ button:hover {
   /* Establecer el ancho al 100% del elemento padre */
   width: 100%;
   /* Establecer el alto al 100% del elemento padre */
-  height: 100%;
+  height: 40px;
   /* Establecer el display a bloque */
   display: block;
 }
